--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <header>
 <h1>
-HTML5 TAGLARI< Başlık 1
+HTML5 TAGLARI
 </h1>
 <p>
 Bu sayfa farklı tarayıcılarda denenmelidir.
@@ -30,4 +30,5 @@ Bu sayfa farklı tarayıcılarda denenmelidir.
 <p>Hacettepe Üniversitesi-footer</p>
 </footer>
 </body>
+
 </html>
