--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 HTML5 TAGLARI
 </h1>
 <p>
-Bu sayfa farklı tarayıcılarda denenmelidir.
+Bu sayfa tarayıcılarda denenmelidir.
 </p>
 </header>
 <nav>
@@ -32,3 +32,4 @@ Bu sayfa farklı tarayıcılarda denenmelidir.
 </body>
 
 </html>
+
