--- a/pages/form.html
+++ b/pages/form.html
@@ -1,4 +1,11 @@
 <html>
-
-  
+<head>
+<meta charset="utf-8">
+<title>HTML5 ÖRNEĞİ</title>
+</head>
+<body>
+  <header>
+    <h1>Form</h1>
+  </header>
+</body>
 </html>
