--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Bu sayfa tarayıcılarda denenmelidir.
 </header>
 <nav>
 <ul>
-<li><a href="https://validator.w3.org/">HTML kodununun uygunluğunu test edin</a></li>
+<li><a href="form.html">Forma gitmek için tıklayınız</a></li>
 <li><a href="https://jsfiddle.net/">HTML kodlarınızı deneyin</a></li>
 <li><a href="https://www.000webhost.com">Sunucuda deneme yapın </a></li>
 </ul></nav>
