--- a/index.html
+++ b/index.html
@@ -1,35 +1,40 @@
-<html>
-<head>
-<meta charset="utf-8">
-<title>HTML5 ÖRNEĞİ</title>
-</head>
-<body>
-<header>
-<h1>
-HTML5 TAGLARI
-</h1>
-<p>
-Bu sayfa tarayıcılarda denenmelidir.
-</p>
-</header>
-<nav>
-<ul>
-<li><a href="sayfalar/form.html">Form için tıklayınız</a></li>
-<li><a href="https://jsfiddle.net/">HTML kodlarınızı deneyin</a></li>
-<li><a href="https://www.000webhost.com">Sunucuda deneme yapın </a></li>
-</ul></nav>
-<article>
-<section>
-<p>Article birden fazla section içerebilir.</p>
-</section>
-</article>
-<aside>
-<p>aside kısmı</p>
-</aside>
-<footer>
-<p>Hacettepe Üniversitesi-footer</p>
-</footer>
-</body>
+<!DOCTYPE html>
+<html lang="tr">
+  <head>
+    <meta charset="UTF-8">
+    <title>BTE311 Tuana Bozdağ</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <body style="font-family:Arial, sans-serif; background-color:#f5f6fa; color:#2f3640;">
+    
+    <header style="background-color:#40739e; color:white; text-align:center; padding:10px 0; border-radius:2px;">
+      <h1>Tuana Bozdağ - 2230780044</h1>
+    </header>
 
+    <h2 style="text-align:left; margin-top:20px; color:#273c75;">Haftalar</h2>
+
+    <div style="width:80%; max-width:600px; background:white; padding:5px 30px; border-radius:2px;">
+      
+      <h4 style="margin-bottom:5px; color:#353b48;">Hafta 3-4</h4>
+      <ul style="padding-left:0; margin-top:0;">
+        <li style="background-color:#dcdde1; padding:10px; border-radius:2px;">
+          <a href="sayfalar/form.html" style="color:#2f3640;font-weight:bold;">Form Ödevi</a>
+        </li>
+      </ul>
+
+      <h4 style="margin-bottom:5px; color:#353b48;">Hafta 5</h4>
+      <ul style="padding-left:0; margin-top:0;">
+        <li style="background-color:#dcdde1; padding:10px; border-radius:2px;">
+          <a href="sayfalar/form.html" style="color:#2f3640;font-weight:bold;">Ödev</a>
+        </li>
+      </ul>
+
+      <h4 style="margin-bottom:5px; color:#353b48;">Hafta 6</h4>
+      <ul style="padding-left:0; margin-top:0;">
+        <li style="background-color:#dcdde1; margin:6px 0; padding:10px; border-radius:2px;">
+          <a href="sayfalar/form.html" style="color:#2f3640;font-weight:bold;">Ödev</a>
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
-
