--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <ul style="padding-left:0; margin-top:0;">
         <li style="background-color:#dcdde1; padding:10px; border-radius:2px;">
           <a href="sayfalar/form.html" style="color:#2f3640;font-weight:bold;">Form Ödevi</a>
+          <a href="sayfalar/test.html" style="color:#2f3640;font-weight:bold;">Test Ödevi</a>
         </li>
       </ul>
 
