--- a/sayfalar/form.html
+++ b/sayfalar/form.html
@@ -1,11 +1,48 @@
-<html>
-<head>
-<meta charset="utf-8">
-<title>Form Ödevi</title>
-</head>
-<body>
-  <header>
-    <h1>Form</h1>
-  </header>
-</body>
+<!DOCTYPE html>
+<html lang="tr">
+  <head>
+    <meta charset="UTF-8">
+    <title>Üyelik Formu</title>
+  </head>
+  <body>
+    <h2>Üyelik Formu</h2>
+    <p>Üye olmak için lütfen aşağıda verilen bölümleri uygun bir biçimde doldurunuz.</p>
+
+    <form action="#" method="post">
+      <label for="ad">Ad:</label><br>
+      <input type="text" id="ad" name="ad"><br><br>
+
+      <label for="soyad">Soyad:</label><br>
+      <input type="text" id="soyad" name="soyad"><br><br>
+
+      <label for="kullanici">Kullanıcı Adı:</label><br>
+      <input type="text" id="kullanici" name="kullanici"><br><br>
+
+      <label for="email">E-posta:</label><br>
+      <input type="email" id="email" name="email"><br><br>
+
+      <label for="sifre">Şifre:</label><br>
+      <input type="password" id="sifre" name="sifre"><br><br>
+
+      <label for="dogum">Doğum Tarihi:</label><br>
+      <input type="date" id="dogum" name="dogum"><br><br>
+
+      <label>Cinsiyet:</label>
+      <input type="radio" id="kadin" name="cinsiyet" value="Kadın">
+      <label for="kadin">Kadın</label>
+      <input type="radio" id="erkek" name="cinsiyet" value="Erkek">
+      <label for="erkek">Erkek</label>
+      <input type="radio" id="diger" name="cinsiyet" value="Diğer">
+      <label for="diger">Diğer</label><br><br>
+
+      <label for="telefon">Telefon:</label><br>
+      <input type="tel" id="telefon" name="telefon"><br><br>
+
+      <label for="ek">Eklemek istedikleriniz:</label><br>
+      <textarea id="ek" name="ek" rows="4" cols="40"></textarea><br><br>
+
+      <input type="submit" value="Gönder">
+      <input type="reset" value="Temizle">
+    </form>
+  </body>
 </html>
