--- a/sayfalar/form.html
+++ b/sayfalar/form.html
@@ -8,7 +8,7 @@
     <h2>Üyelik Formu</h2>
     <p>Üye olmak için lütfen aşağıda verilen bölümleri uygun bir biçimde doldurunuz.</p>
 
-    <form action="#" method="post">
+    <form method="post">
       <label for="ad">Ad:</label><br>
       <input type="text" id="ad" name="ad"><br><br>
 
