--- a/sayfalar/test.html
+++ b/sayfalar/test.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Test Ödevi</title>
 </head>
-<body style="font-family: Arial, sans-serif; background: #f4f7f8; color: #333; max-width: 800px; margin: 15px auto; padding: 15px;">
+<body style="font-family: Arial, sans-serif; background: #f4f7f8; color: #333; max-width: 800px; margin:auto; padding: 15px;">
 
   <h1 style="text-align:center; color:#408000">Web Programcılığı Testi</h1>
 
