--- a/sayfalar/test.html
+++ b/sayfalar/test.html
@@ -6,12 +6,12 @@
 </head>
 <body style="font-family: Arial, sans-serif; background: #f4f7f8; color: #333; max-width: 800px; margin:auto; padding: 15px;">
 
-  <h1 style="text-align:center; color:#408000">Web Programcılığı Testi</h1>
+  <h1 style="text-align:center; color:#408000">Web Tabanlı Programlama Testi</h1>
 
   <form>
   <fieldset style="background-color:#f2ffe6; border:1px solid #59b300; padding:15px; margin-bottom:15px;">
-      <fieldset>
-           <h3 style="text-align:center; font-size:22px; color:#59b300; margin-top:20;">Genel Bilgiler</h3>
+      <fieldset style="background-color:#59b300">
+           <h3 style="text-align:center; font-size:22px; color:white; margin-top:20;">Genel Bilgiler</h3>
       </fieldset>
       <div style="font-size:14px;">
          <p>Adınız - Soyadınız</p>
@@ -29,8 +29,8 @@
     </fieldset>
 
     <fieldset style="background-color:#ececf9; border:1px solid #333399; padding:15px;">
-      <fieldset>
-        <h3 style="text-align:center; font-size:22px; color:#333399; margin-top:20;">Test Soruları</h3>
+      <fieldset style="background-color:#333399">
+        <h3 style="text-align:center; font-size:22px; color:white; margin-top:20;">Test Soruları</h3>
       </fieldset>
 
       <p>1. HTML’de bağlantı (link) oluşturmak için hangi etiket kullanılır?</p>
@@ -73,7 +73,7 @@
       <p>10. Web sitesi tasarımında kullanılan temel renk sayısını giriniz.</p>
       <input type="number" min="1" max="10" style="width:50%; padding:6px;"><br><br>
 
-      <input type="submit" value="Gönder" style="background-color:#005b96; color:white; padding:10px 20px; border:none; font-size:16px;">
+      <input type="submit" value="Gönder" style="background-color:#333399; color:white; padding:10px 20px; border:none; font-size:16px;">
     </fieldset>
   </form>
 
