--- a/index.html
+++ b/index.html
@@ -5,37 +5,23 @@
     <title>BTE311 Tuana Bozdağ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-  <body style="font-family:Arial, sans-serif; background-color:#f5f6fa; color:#2f3640;">
+  <body style="font-family:Arial, sans-serif; background-color:#f2ffe6; color:#003300;">
     
-    <header style="background-color:#40739e; color:white; text-align:center; padding:10px 0; border-radius:2px;">
+    <header style="background-color:#356600; color:#ffffe6; text-align:center; padding:10px 0; border-radius:2px;">
       <h1>Tuana Bozdağ - 2230780044</h1>
     </header>
 
-    <h2 style="text-align:left; margin-top:20px; color:#273c75;">Haftalar</h2>
+    <h2 style="text-align:left; margin-top:20px; color:#1a3300;">Haftalar</h2>
 
     <div style="width:80%; max-width:600px; background:white; padding:5px 30px; border-radius:2px;">
       
-      <h4 style="margin-bottom:5px; color:#353b48;">Hafta 3-4</h4>
+      <h4 style="margin-bottom:5px; color:#004d00;">Hafta 4</h4>
       <ul style="padding-left:0; margin-top:0;">
-        <li style="background-color:#dcdde1; padding:10px; border-radius:2px;">
-            <a href="sayfalar/form.html" style="color:#2f3640;font-weight:bold;">Form Ödevi</a>
+        <li style="background-color:#d9ffb3; padding:10px; border-radius:2px;">
+            <a href="sayfalar/form.html" style="color:#003300;font-weight:bold;">Form Ödevi</a>
         </li>
-        <li style="background-color:#dcdde1; padding:7px; border-radius:2px;">
-            <a href="sayfalar/test.html" style="color:#2f3640;font-weight:bold;">Test Ödevi</a>
-        </li>
-      </ul>
-
-      <h4 style="margin-bottom:5px; color:#353b48;">Hafta 5</h4>
-      <ul style="padding-left:0; margin-top:0;">
-        <li style="background-color:#dcdde1; padding:10px; border-radius:2px;">
-          <a href="sayfalar/form.html" style="color:#2f3640;font-weight:bold;">Ödev</a>
-        </li>
-      </ul>
-
-      <h4 style="margin-bottom:5px; color:#353b48;">Hafta 6</h4>
-      <ul style="padding-left:0; margin-top:0;">
-        <li style="background-color:#dcdde1; margin:6px 0; padding:10px; border-radius:2px;">
-          <a href="sayfalar/form.html" style="color:#2f3640;font-weight:bold;">Ödev</a>
+        <li style="background-color:#d9ffb3; padding:7px; border-radius:2px;">
+            <a href="sayfalar/test.html" style="color:#003300;font-weight:bold;">Test Ödevi</a>
         </li>
       </ul>
     </div>
