--- a/sayfalar/test.html
+++ b/sayfalar/test.html
@@ -73,7 +73,7 @@
       <p>10. Web sitesi tasarımında kullanılan temel renk sayısını giriniz.</p>
       <input type="number" min="1" max="10" style="width:50%; padding:6px;"><br><br>
 
-      <input type="submit" value="Gönder" style="background-color:#333399; color:white; padding:10px 20px; border:none; font-size:16px;">
+      <input type="submit" value="Gönder" style="background-color:#333399; color:white; padding:10px 20px; font-size:16px;">
     </fieldset>
   </form>
 
