--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="tr">
   <head>
     <meta charset="UTF-8">
-    <title>BTE311 Tuana Bozdağ</title>
+    <title>BTE311-Tuana Bozdağ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body style="font-family:Arial, sans-serif; background-color:#f2ffe6; color:#003300;">
