--- a/sayfalar/test.html
+++ b/sayfalar/test.html
@@ -20,7 +20,7 @@
         <p>Kullanıcı Adınız</p>
         <input type="text" style="width:50%; padding:6px;"><br><br>
 
-        <p>JavaScript bilginizi 1 ile 10 arasında değerlendiriniz.</p>
+        <p>Web Tabanlı Programlama bilginizi 1 ile 10 arasında değerlendiriniz.</p>
         <input type="range" min="1" max="10" style="width:50%;"><br><br>
 
         <p>Web programlama öğrenirken en zorlandığınız konu nedir?</p>
