--- a/sayfalar/form.html
+++ b/sayfalar/form.html
@@ -11,7 +11,7 @@
       </fieldset>
       <p style="text-align:center;">Üye olmak için lütfen aşağıdaki bilgileri doldurunuz.</p>
 
-      <form method="post">
+      <form>
         <label for="ad">Ad:</label><br>
         <input type="text" id="ad" name="ad" style="padding:6px; border:1px solid #ccc;"><br><br>
 
