--- a/index.html
+++ b/index.html
@@ -24,6 +24,25 @@
             <a href="sayfalar/test.html" style="color:#003300;font-weight:bold;">Test Ödevi</a>
         </li>
       </ul>
+
+      <h4 style="margin-bottom:5px; color:#004d00;">Hafta 5</h4>
+      <ul style="padding-left:0; margin-top:0;">
+        <li style="background-color:#d9ffb3; padding:10px; border-radius:2px;">
+            <a href="sayfalar/tablo1.html" style="color:#003300;font-weight:bold;">Tablo1 Ödev</a>
+        </li>
+        <li style="background-color:#d9ffb3; padding:7px; border-radius:2px;">
+            <a href="sayfalar/tablo2.html" style="color:#003300;font-weight:bold;">Tablo2 Ödevi</a>
+        </li>
+        </li>
+        <li style="background-color:#d9ffb3; padding:7px; border-radius:2px;">
+            <a href="sayfalar/tablo3/tablo3.html" style="color:#003300;font-weight:bold;">Tablo3 Ödevi</a>
+        </li>
+        </li>
+        <li style="background-color:#d9ffb3; padding:7px; border-radius:2px;">
+            <a href="sayfalar/venn_sema.html" style="color:#003300;font-weight:bold;">Venn Şeması Ödevi</a>
+        </li>
+      </ul>
+
     </div>
   </body>
 </html>
