--- a/sayfalar/div_animasyon.html
+++ b/sayfalar/div_animasyon.html
@@ -6,5 +6,7 @@
 <body>
   <h1>Hacettepe BÖTE</h1>
   <div style="background-color: red; height: 300px; width:700px; opacity: 0.5; margin: center;"></div>
+  <div style="background-color: red; height: 800px; width:200px; opacity: 0.5; margin: center;"></div>
+
 </body>
 </html>
