--- a/sayfalar/div_animasyon.html
+++ b/sayfalar/div_animasyon.html
@@ -3,10 +3,134 @@
 <meta charset="utf-8">
 <title>div Animasyon Ödevi</title>
 </head>
-<body>
-  <h1>Hacettepe BÖTE</h1>
-  <div style="background-color: red; height: 300px; width:700px; opacity: 0.5; margin: center;"></div>
-  <div style="background-color: red; height: 800px; width:200px; opacity: 0.5; margin: center;"></div>
+<style>
+  /*@keyframes renkDegisim 
+  {from
+  {
+      background-color: red;
+  }
+  to{
+    background-color: blue;
+  }s
+  }*/
+  div{
+    background-color: red;
+    /*animation-name: renkDegisim;
+    animation-duration: 4s;*/
+  }
 
-</body>
+  h1{
+    color: rgb(255, 0, 55);
+    margin-top: 100px;
+    margin-left: 500px;
+  }
+
+   .sekil1{
+    height: 100px;
+    width: 100px;
+    opacity: 0.5;
+    position: absolute;
+    margin-top: 300px;
+    margin-left: 300px;
+
+  }
+
+    .sekil2{
+    height: 150px;
+    width: 150px;
+    opacity: 0.5;
+    position: absolute; 
+    margin-top: 300px;
+    margin-left: 300px; 
+
+  }
+
+    .sekil3{
+    height: 200px;
+    width: 200px;
+    opacity: 0.5;
+    position: absolute;
+    margin-top: 300px;
+    margin-left: 300px;
+
+  }
+
+    .sekil4{
+    height: 250px;
+    width: 250px;
+    opacity: 0.5;
+    position: absolute;
+    margin-top: 300px;
+    margin-left: 300px;
+
+  }
+
+    .sekil5{
+    height: 800px;
+    width: 700px;
+    opacity: 0.5;
+    position: absolute;
+    margin-top: 200px;
+    margin-left: 280px;
+
+  }
+
+    .sekil6{
+    height: 280px;
+    width: 1150px;
+    opacity: 0.5;
+    position: absolute;
+    margin-top: 490px;
+    margin-left: 80px;
+  }
+
+    .sekil7{
+    height: 350px;
+    width: 900px;
+    opacity: 0.5;
+    position: absolute;
+    margin-top: 440px;
+    margin-left: 170px;
+  }
+
+    .sekil8{
+    height: 470px;
+    width: 850px;
+    opacity: 0.5;
+    position: absolute;
+    margin-top: 370px;
+    margin-left: 200px;
+  }
+
+   .sekil9{
+    height: 520px;
+    width: 700px;
+    opacity: 0.5;
+    position: absolute;
+    margin-top: 340px;
+    margin-left: 260px;
+  }
+
+   .sekil10{
+    height: 600px;
+    width: 600px;
+    opacity: 0.5;
+    position: absolute;
+    margin-top: 300px;
+    margin-left: 300px; 
+  }
+</style>
+<body>
+  <h1>Tuana Bozdağ</h1>
+  <div class="sekil1"></div>
+  <div class="sekil2"></div>
+  <div class="sekil3"></div>
+  <div class="sekil4"></div>
+  <div class="sekil5"></div>
+  <div class="sekil6"></div>
+  <div class="sekil7"></div>
+  <div class="sekil8"></div>
+  <div class="sekil9"></div>
+  <div class="sekil10"></div>
+
 </html>
