--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
         </li>
       </ul>
 
+      <h4 style="margin-bottom:5px; color:#004d00;">Hafta 7</h4>
+      <ul style="padding-left:0; margin-top:0;">
+        <li style="background-color:#d9ffb3; padding:10px; border-radius:2px;">
+            <a href="sayfalar/animasyon.html" style="color:#003300;font-weight:bold;">Daireler Animasyon Ödevi</a>
+        </li>
+
     </div>
   </body>
 </html>
