--- a/sayfalar/kartlar.html
+++ b/sayfalar/kartlar.html
@@ -4,11 +4,107 @@
 <title>Bootstrap Kartlar Ödevi</title>
 <meta name= "viewport" content= "width=device-width, initial-scale=1">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </head>
+<style>
+ h1 {
+    text-align: center;
+    margin: 70px 0;
+  }
+
+  .card-body {
+  display: flex;
+  flex-direction: column;
+  height: 100%;           
+  }
+
+  .card-body .btn {
+  margin-top: auto; 
+  }
+
+  body{
+    background-color: rgb(238, 238, 238);
+  }
+</style>
 <body>
   <header>
-    <h1>Gumball Karakter Rehberi</h1>
+    <h1 style="color: green;">Gumball'ın Muhteşem Dünyası Karakter Rehberi</h1>
   </header>
+
+<div class="container">
+  <div class="row g-3">
+    <div class="card col-12 col-sm-6 col-md-4 col-lg-2"> 
+    <img class="card-img-top" src="C:\Users\Lenovo\OneDrive\Masaüstü\BTE311\img\gumball.png" alt="Card image cap">
+    <div class="card-body"> 
+    <h4 class="card-title"><a>Gumball Watterson </a></h4> <p class="card-text">Gumball Watterson, ele avuca sığmayan ve yaşadığı kasabada yaramazlık yapmaya meyilli on iki yaşında mavi bir kedidir.</p> 
+    <a href="https://theamazingworldofgumball.fandom.com/wiki/Gumball_Watterson" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+
+    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
+    <img class="card-img-top" src="C:\Users\Lenovo\OneDrive\Masaüstü\BTE311\img\darwin.png" alt="Card image cap">
+    <div class="card-body"> 
+    <h4 class="card-title"><a>Darwin Watterson </a></h4> <p class="card-text">Darwin Watterson, Gumball'un üvey balık kardeşi ve en iyi arkadaşıdır.</p> 
+    <a href="https://theamazingworldofgumball.fandom.com/wiki/Darwin_Watterson" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+
+    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
+    <img class="card-img-top" src="C:\Users\Lenovo\OneDrive\Masaüstü\BTE311\img\anais.png" alt="Card image cap">
+    <div class="card-body"> 
+    <h4 class="card-title"><a>Anais Watterson </a></h4> <p class="card-text">Anais Watterson, Gumball'un dört yaşındaki pembe tavşan kız kardeşi ve ailenin en zeki üyesidir.</p> 
+    <a href="https://theamazingworldofgumball.fandom.com/wiki/Anais_Watterson" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+
+    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
+    <img class="card-img-top" src="C:\Users\Lenovo\OneDrive\Masaüstü\BTE311\img\nicole.png" alt="Card image cap">
+    <div class="card-body"> 
+    <h4 class="card-title"><a>Nicole Watterson </a></h4> <p class="card-text">Nicole Watterson mavi bir kedidir ve Gumball, Darwin ve Anais'in sevgi dolu annesidir.</p> 
+    <a href="https://theamazingworldofgumball.fandom.com/wiki/Nicole_Watterson" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+
+    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
+    <img class="card-img-top" src="C:\Users\Lenovo\OneDrive\Masaüstü\BTE311\img\richard.png" alt="Card image cap">
+    <div class="card-body"> 
+    <h4 class="card-title"><a>Richard Watterson </a></h4> <p class="card-text">Pembe bir tavşan olan Richard Watterson, Gumball, Darwin ve Anais'in şefkatli babasıdır.</p> 
+    <a href="https://theamazingworldofgumball.fandom.com/wiki/Richard_Watterson" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+
+    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
+    <img class="card-img-top" src="C:\Users\Lenovo\OneDrive\Masaüstü\BTE311\img\penny.png" alt="Card image cap">
+    <div class="card-body"> 
+    <h4 class="card-title"><a>Penny Fitzgerald </a></h4> <p class="card-text">Penny Fitzgerald, on iki yaşında bir şekil değiştiren bir peri ve Gumball'un kız arkadaşıdır.</p> 
+    <a href="https://theamazingworldofgumball.fandom.com/wiki/Penny_Fitzgerald" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+
+    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
+    <img class="card-img-top" src="C:\Users\Lenovo\OneDrive\Masaüstü\BTE311\img\carrie.png" alt="Card image cap">
+    <div class="card-body"> 
+    <h4 class="card-title"><a>Carrie Krueger </a></h4> <p class="card-text">Carrie Krueger, 327 yaşında bir hayalettir ve doğaüstü dünyanın uzmanıdır.</p> 
+    <a href="https://theamazingworldofgumball.fandom.com/wiki/Carrie_Krueger" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+
+    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
+    <img class="card-img-top" src="C:\Users\Lenovo\OneDrive\Masaüstü\BTE311\img\tobias.png" alt="Card image cap">
+    <div class="card-body"> 
+    <h4 class="card-title"><a>Tobias Wilson </a></h4> <p class="card-text">Tobias Wilson, on iki yaşında gökkuşağı renginde olan bir karakterdir. Okuldakiler tarafından pek sevilmez ve gıcık olarak tanımlanır.</p> 
+    <a href="https://theamazingworldofgumball.fandom.com/wiki/Tobias_Wilson" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+
+    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
+    <img class="card-img-top" src="C:\Users\Lenovo\OneDrive\Masaüstü\BTE311\img\joe.png" alt="Card image cap">
+    <div class="card-body"> 
+    <h4 class="card-title"><a>Banana Joe </a></h4> <p class="card-text">Banana Joe, bir muzdur ve sınıfının palyaçosudur. Banana Joe genellikle neşeli biridir.</p> 
+    <a href="https://theamazingworldofgumball.fandom.com/wiki/Banana_Joe" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+
+    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
+    <img class="card-img-top" src="C:\Users\Lenovo\OneDrive\Masaüstü\BTE311\img\alan.png" alt="Card image cap">
+    <div class="card-body"> 
+    <h4 class="card-title"><a>Alan Keane </a></h4> <p class="card-text">Alan Keane, turkuaz renkli bir balondur ve okulun en popüler öğrencilerinden biridir. Alan, hayır işlerine önem verir.</p> 
+    <a href="https://theamazingworldofgumball.fandom.com/wiki/Alan_Keane" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+
+    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
+    <img class="card-img-top" src="C:\Users\Lenovo\OneDrive\Masaüstü\BTE311\img\bobert.png" alt="Card image cap">
+    <div class="card-body"> 
+    <h4 class="card-title"><a>Bobert 6B </a></h4> <p class="card-text">Bobert 6B, Bobert Store'dan gelen ve nedense ortaokula giden bir robottur. Bir robot olduğu için Bobert, arkadaşları arasında en zeki olanıdır.</p> 
+    <a href="https://theamazingworldofgumball.fandom.com/wiki/Bobert_6B" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+
+    <div class="card col-12 col-sm-6 col-md-4 col-lg-2">
+    <img class="card-img-top" src="C:\Users\Lenovo\OneDrive\Masaüstü\BTE311\img\tina.png" alt="Card image cap">
+    <div class="card-body"> 
+    <h4 class="card-title"><a>Tina Rex </a></h4> <p class="card-text">Tina Rex, vahşi bir tyrannosaurus rex ve okulun eski zorbasıdır. Ama şimdilerde arkadaşlarıyla çok daha iyi anlaşıyor.</p> 
+    <a href="https://theamazingworldofgumball.fandom.com/wiki/Tina_Rex" class="btn btn-success">Daha fazla bilgi için</a> </div> </div>
+  </div>
+</div>  
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
