--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
             <a href="sayfalar/animasyon.html" style="color:#003300;font-weight:bold;">Daireler Animasyon Ödevi</a>
         </li>
 
+      <h4 style="margin-bottom:5px; color:#004d00;">Hafta 8</h4>
+      <ul style="padding-left:0; margin-top:0;">
+        <li style="background-color:#d9ffb3; padding:10px; border-radius:2px;">
+            <a href="sayfalar/kartlar.html" style="color:#003300;font-weight:bold;">Bootstrap Kartlar Ödevi</a>
+        </li>
+
     </div>
   </body>
 </html>
