--- a/sayfalar/js_gorseller.html
+++ b/sayfalar/js_gorseller.html
@@ -12,30 +12,33 @@
   }
 
   h1 {
-    margin: 40px 0;
+    margin: 25px 0;
     color: green;
   }
 
   
   #randomImage {
-    width: 220px;
-    height: 220px;
+    width: 210px;
+    height: 210px;
     object-fit: cover !important;
     border-radius: 50% !important;
     border-radius: 10px;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
   }
 
 
-  .galeri {
+  .resimdizin {
     display: flex;
     justify-content: center;
-    gap: 40px;
+    gap: 10px;
     margin-top: 20px;
   }
 
   .kutu {
     text-align: center;
+    margin-bottom: 30px;
+    width: 270px;
+    height: 270px;
   }
 
   .kutu img {
@@ -48,8 +51,11 @@
 
   button {
     margin-top: 10px;
+    margin-bottom: 10px;
     padding: 8px 15px;
     cursor: pointer;
+    background-color: green;
+    color: beige;
   }
 
 </style>
@@ -63,24 +69,24 @@
 <img id="randomImage" src="../img/js_gorseller/js1.png" alt="Random">
 
 
-<div class="galeri">
+<div class="resimdizin">
 
   <div class="kutu">
-    <img id = resim1 src="../img/js_gorseller/js3.png" class="resim">
     <button onclick="document.getElementById('resim1').style.display='none'">Gizle</button>
     <button onclick="document.getElementById('resim1').style.display='block'">Göster</button>
+    <img id = resim1 src="../img/js_gorseller/js3.png" class="resim">
   </div>
 
   <div class="kutu">
-    <img id = resim2 src="../img/js_gorseller/js10.png" class="resim">
     <button onclick="document.getElementById('resim2').style.display='none'">Gizle</button>
     <button onclick="document.getElementById('resim2').style.display='block'">Göster</button>
+    <img id = resim2 src="../img/js_gorseller/js10.png" class="resim">
   </div>
 
   <div class="kutu">
-    <img id = resim3 src="../img/js_gorseller/js9.png" class="resim">
     <button onclick="document.getElementById('resim3').style.display='none'">Gizle</button>
     <button onclick="document.getElementById('resim3').style.display='block'">Göster</button>
+    <img id = resim3 src="../img/js_gorseller/js9.png" class="resim">
   </div>
 
 </div>
@@ -93,14 +99,9 @@
   ];
 
     function rastgeleSayi255() {
-    let sayi = (Math.random() * 256) % 256;
-    while (sayi % 1 !== 0) { 
-      sayi = (Math.random() * 256) % 256;
-    }
-    return sayi;
+    return parseInt((Math.random() * 256)%256);
   }
 
-  // Rastgele arka plan rengi
   function rastgeleRenk() {
     var r = rastgeleSayi255();
     var g = rastgeleSayi255();
@@ -108,19 +109,14 @@
     return "rgb(" + r + "," + g + "," + b + ")";
   }
 
-  // Math.floor vs parseInt vs bitwise yok!
   function rastgeleResimVeRenkGoster() {
-    let rastgele = (Math.random() * 10) % 10;
-    while (rastgele % 1 !== 0) {  // tam sayı çıkana kadar tekrar
-      rastgele = (Math.random() * 10) % 10;
-    }
-    document.getElementById("randomImage").src = resimler[rastgele];
+    var index = parseInt((Math.random() * 10)%10);
+
+    document.getElementById("randomImage").src = resimler[index];
     document.body.style.backgroundColor = rastgeleRenk();
   }
 
-  // Fonksiyonu direkt çağır
   rastgeleResimVeRenkGoster();
-
 
 </script>
 
