--- a/sayfalar/js_gorseller.html
+++ b/sayfalar/js_gorseller.html
@@ -98,6 +98,12 @@
   '../img/js_gorseller/js6.png','../img/js_gorseller/js7.png','../img/js_gorseller/js8.png','../img/js_gorseller/js9.png','../img/js_gorseller/js10.png'
   ];
 
+  //-----------------------------BİLGİLENDİRME------------------------------------------------------------
+  //Hocam random için değiniz çarpma ve mod alma yöntemini kullandım ancak yine de ondalık sayılar üretti.
+  //Bunun için yapay zekaya danıştım ve parseInt kullanmamı önerdi. 
+  // O yüzden burada dedikleriniz dışında parseInt de kullandım.
+  //------------------------------------------------------------------------------------------------------
+  
     function rastgeleSayi255() {
     return parseInt((Math.random() * 256)%256);
   }
