--- a/sayfalar/js_gorseller.html
+++ b/sayfalar/js_gorseller.html
@@ -99,11 +99,11 @@
   ];
 
   //-----------------------------BİLGİLENDİRME------------------------------------------------------------
-  //Hocam random için değiniz çarpma ve mod alma yöntemini kullandım ancak yine de ondalık sayılar üretti.
+  //Hocam random için dediğiniz çarpma ve mod alma yöntemini kullandım ancak yine de ondalık sayılar üretti.
   //Bunun için yapay zekaya danıştım ve parseInt kullanmamı önerdi. 
-  // O yüzden burada dedikleriniz dışında parseInt de kullandım.
+  //O yüzden burada dedikleriniz dışında parseInt de kullandım.
   //------------------------------------------------------------------------------------------------------
-  
+
     function rastgeleSayi255() {
     return parseInt((Math.random() * 256)%256);
   }
