--- a/index.html
+++ b/index.html
@@ -13,61 +13,61 @@
 
     <h2 style="text-align:left; margin-top:20px; color:#1a3300;">Haftalar</h2>
 
-    <div style="width:80%; max-width:600px; background:white; padding:5px 30px; border:#356600 2px; border-radius:5px;">
+    <div style="width:80%; max-width:600px; background:white; padding:5px 30px; border:2px solid #356600 2px; border-radius:5px;">
       
       <h4 style="margin-bottom:5px; color:#004d00;">Hafta 4</h4>
       <ul style="padding-left:0; margin-top:0;">
-        <li style="background-color:#c7d8b5; padding:10px; border-radius:2px;">
+        <li style="background-color:#d9ebc5; padding:10px; border-radius:2px;">
             <a href="sayfalar/form.html" style="color:#003300;font-weight:bold;">Form Ödevi</a>
         </li>
-        <li style="background-color:#c7d8b5; padding:7px; border-radius:2px;">
+        <li style="background-color:#d9ebc5; padding:7px; border-radius:2px;">
             <a href="sayfalar/test.html" style="color:#003300;font-weight:bold;">Test Ödevi</a>
         </li>
       </ul>
 
       <h4 style="margin-bottom:5px; color:#004d00;">Hafta 5</h4>
       <ul style="padding-left:0; margin-top:0;">
-        <li style="background-color:#c7d8b5; padding:10px; border-radius:2px;">
+        <li style="background-color:#d9ebc5; padding:10px; border-radius:2px;">
             <a href="sayfalar/tablo1.html" style="color:#003300;font-weight:bold;">Tablo1 Ödev</a>
         </li>
-        <li style="background-color:#c7d8b5; padding:7px; border-radius:2px;">
+        <li style="background-color:#d9ebc5; padding:7px; border-radius:2px;">
             <a href="sayfalar/tablo2.html" style="color:#003300;font-weight:bold;">Tablo2 Ödevi</a>
         </li>
-        <li style="background-color:#c7d8b5; padding:7px; border-radius:2px;">
+        <li style="background-color:#d9ebc5; padding:7px; border-radius:2px;">
             <a href="sayfalar/tablo3/tablo3.html" style="color:#003300;font-weight:bold;">Tablo3 Ödevi</a>
         </li>
-        <li style="background-color:#c7d8b5; padding:7px; border-radius:2px;">
+        <li style="background-color:#d9ebc5; padding:7px; border-radius:2px;">
             <a href="sayfalar/venn_sema.html" style="color:#003300;font-weight:bold;">Venn Şeması Ödevi</a>
         </li>
       </ul>
 
       <h4 style="margin-bottom:5px; color:#004d00;">Hafta 7</h4>
       <ul style="padding-left:0; margin-top:0;">
-        <li style="background-color:#c7d8b5; padding:10px; border-radius:2px;">
+        <li style="background-color:#d9ebc5; padding:10px; border-radius:2px;">
             <a href="sayfalar/animasyon.html" style="color:#003300;font-weight:bold;">Daireler Animasyon Ödevi</a>
         </li>
       </ul>
 
       <h4 style="margin-bottom:5px; color:#004d00;">Hafta 8</h4>
       <ul style="padding-left:0; margin-top:0;">
-        <li style="background-color:#c7d8b5; padding:10px; border-radius:2px;">
+        <li style="background-color:#d9ebc5; padding:10px; border-radius:2px;">
             <a href="sayfalar/kartlar.html" style="color:#003300;font-weight:bold;">Bootstrap Kartlar Ödevi</a>
         </li>
       </ul>
 
       <h4 style="margin-bottom:5px; color:#004d00;">Hafta 9</h4>
       <ul style="padding-left:0; margin-top:0;">
-        <li style="background-color:#c7d8b5; padding:10px; border-radius:2px;">
+        <li style="background-color:#d9ebc5; padding:10px; border-radius:2px;">
             <a href="sayfalar/js_gorseller.html" style="color:#003300;font-weight:bold;">JavaScript Görsel Ödevi</a>
         </li>
       </ul>
 
       <h4 style="margin-bottom:5px; color:#004d00;">Hafta 10</h4>
       <ul style="padding-left:0; margin-top:0;">
-        <li style="background-color:#c7d8b5; padding:10px; border-radius:2px;">
+        <li style="background-color:#d9ebc5; padding:10px; border-radius:2px;">
             <a href="sayfalar/oyunlar/orijinal/CardFlip_Game-main/index.html" style="color:#003300;font-weight:bold;">JavaScript Oyun / Orijinal</a>
         </li>
-              <li style="background-color:#c7d8b5; padding:10px; border-radius:2px;">
+              <li style="background-color:#d9ebc5; padding:10px; border-radius:2px;">
             <a href="sayfalar/oyunlar/myver/HafizaOyunu_redesigned/index.html" style="color:#003300;font-weight:bold;">JavaScript Oyun / Benim Ver.</a>
         </li>
       </ul>
