--- a/sayfalar/venn_sema.html
+++ b/sayfalar/venn_sema.html
@@ -5,45 +5,62 @@
   <title>Venn Şeması Ödevi</title>
   <style>
     body {
-      background-color: white;
-      position: relative;}
+      background-color: #f2ffe6;
+      text-align: center;
+      margin: 0;
+    }
 
-    div {
+    h2{
+      margin-top: 40px;
+      font-family: "Arial", sans-serif;
+      font-size: 28px;
+      color: #408000;
+    }
+
+    .container {
+      position: relative;
+      width: 500px;
+      height: 450px;
+      margin: 0 auto; 
+    }
+
+    .container div {
       width: 250px;
       height: 250px;
       border-radius: 50%;
       opacity: 0.5;
-      position: absolute;}
+      position: absolute;
+    }
 
-    .kirmizi{
-      background-color: red;
-      top: 100px;
-      left: 300px;}
-
-    .mavi{
-      background-color: blue;
-      top: 100px;
-      left: 460px;}
-
-    .sari{
-      background-color: yellow;
-      top: 200px;
-      left: 380px;}
+    .kirmizi { 
+      background-color: red; 
+      top: 50px; 
+      left: 60px; 
+    }
     
-    h2{
-      text-align: center;
-      margin: 80px 0;
-      position: relative;
-      left: 275px;
-      font-family: "Arial", sans-serif;
-      font-size: 28px}
+    .mavi    { 
+      background-color: blue; 
+      top: 50px; 
+      left: 210px; 
+    }
+    
+    .sari    { 
+      background-color: yellow; 
+      top: 150px; 
+      left: 135px; 
+    }
 
   </style>
 </head>
 <body>
+
   <h2>Venn Şeması</h2>
-  <div class="kirmizi"></div>
-  <div class="sari"></div>
-  <div class="mavi"></div>
+
+  <div class="container">
+    <div class="kirmizi"></div>
+    <div class="mavi"></div>
+    <div class="sari"></div>
+  </div>
+
 </body>
 </html>
