--- a/sayfalar/test.html
+++ b/sayfalar/test.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <title>Test Ödevi</title>
 </head>
-<body style="font-family: Arial, sans-serif; background: #f4f7f8; color: #333; max-width: 800px; margin:auto; padding: 15px;">
+<body style="font-family: Arial, sans-serif; background: #f2ffe6; color: #333; max-width: 800px; margin:auto; padding: 15px;">
 
   <h1 style="text-align:center; color:#408000">Web Tabanlı Programlama Testi</h1>
 
   <form>
-  <fieldset style="background-color:#f2ffe6; border:1px solid #59b300; padding:15px; margin-bottom:15px;">
+  <fieldset style="background-color:#e6f6d7; border:1px solid #59b300; padding:15px; margin-bottom:15px;">
       <fieldset style="background-color:#59b300">
            <h3 style="text-align:center; font-size:22px; color:white; margin-top:20;">Genel Bilgiler</h3>
       </fieldset>
